# MaxE2-RPI-Jetson

./: .gitignore  README.md
docs/: 01_ENG2_Max_E2_PY_ros2_ready.py  INTEGRATION_MAX_E2.md  LAUNCHES.md  cm550_head_ollo_receiver_example.py  cm550_motion_remocon_receiver_example.py  max_e2_cm550_ros2_usb_bridge.py
scripts/: extract_cm550_motion_map.py
src/max_bringup/: package.xml  setup.py
src/max_bringup/config/: apriltag_head_search.yaml  cm550_motion_bridge_max_e2.yaml  engineer_max_e2.yaml  head_ollo_bridge.yaml  led_ollo_bridge.yaml  max_params.yaml  max_params_jetson.yaml  max_params_motion.yaml
src/max_bringup/doc/: LAUNCHERS.md  MOTION_TELEOP.md  TELEOP_SSH.md
src/max_bringup/launch/: apriltag_action_launch.py  apriltag_action_motion_launch.py  apriltag_head_search_launch.py  cm550_motion_bridge_launch.py  debug_image_view_launch.py  engineer_joint_launch.py  engineer_joints_teleop_launch.py  head_ollo_bridge_launch.py  led_ollo_bridge_launch.py  line_follow_launch.py  line_follow_motion_launch.py  max_launch.py  motion_mux_launch.py  preflight_launch.py  shape_track_launch.py  shape_track_motion_launch.py  teleop_cm550_launch.py  teleop_launch.py  vision_only_launch.py
src/max_bringup/scripts/: teleop_cm550_one_terminal.sh
src/max_control/: package.xml  setup.cfg  setup.py
src/max_control/max_control/: action_executor_node.py  apriltag_head_search_node.py  failsafe_node.py  joint_teleop_node.py  line_tracker_node.py  motion_mux_node.py  tracker_node.py  twist_to_motion_node.py
src/max_driver/: package.xml  setup.cfg  setup.py
src/max_driver/max_driver/: cm550_motion_bridge_node.py  cm550_remocon_bridge_node.py  dynamixel_node.py  engineer_joint_node.py  head_ollo_bridge_node.py  led_ollo_bridge_node.py
src/max_interfaces/: CMakeLists.txt  package.xml
src/max_interfaces/msg/: AprilTagArray.msg  AprilTagDetection.msg  Detection.msg  DynamixelState.msg  DynamixelStateArray.msg  LineDetection.msg
src/max_interfaces/srv/: SetOperatingMode.srv  SetTorque.srv
src/max_vision/: package.xml  setup.cfg  setup.py
src/max_vision/max_vision/: apriltag_detector_node.py  debug_view_node.py  detector_node.py  hsv_calibrator.py  line_detector_node.py  preflight_check_node.py  shape_detector_node.py
