<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>max_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for MAX robot</description>
  <maintainer email="sebastian@todo.com">sebastian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>max_vision</exec_depend>
  <exec_depend>max_control</exec_depend>
  <exec_depend>max_driver</exec_depend>
  <exec_depend>max_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <export>
  <build_type>ament_python</build_type>
</export>
</package>
